add new dataset

--- a/anonimity.ipynb
+++ b/anonimity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +79,37 @@
     "    print(\"Number of unique nodes:\", unique_count)\n",
     "    \n",
     "    return percentage_unique"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Betweenness Centrality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def betweenness_centra(G):\n",
+    "    \n",
+    "    betweenness_centrality = nx.betweenness_centrality(G)\n",
+    "\n",
+    "    betweenness_ranking = {node: centrality for node, centrality in sorted(betweenness_centrality.items(), key=lambda x: x[1], reverse=True)}\n",
+    "\n",
+    "    # print(\"Betweenness Centrality Ranking (as dictionary):\")\n",
+    "    # print(betweenness_ranking)\n",
+    "    return betweenness_ranking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dataset 1"
    ]
   },
   {
@@ -235,6 +266,20 @@
     "plt.xticks(range(len(unique_percentage)), range(len(unique_percentage)))\n",
     "plt.legend()\n",
     "plt.show()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dataset 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Trash"
    ]
   },
   {
