--- a/anonimity.ipynb
+++ b/anonimity.ipynb
@@ -75,6 +75,13 @@
     "    total_nodes = G.number_of_nodes()\n",
     "    percentage_unique = (unique_count / total_nodes) * 100\n",
     "\n",
+    "    # TODO: add other candidate set sizes (2-5, 6-20, 20-50, 50+) \n",
+    "    count_set_1 = sum(1 for count in frequency_dict.values() if (count >= 2 and count <= 5))\n",
+    "    count_set_2 = sum(1 for count in frequency_dict.values() if (count >= 6 and count <=20))\n",
+    "    count_set_3 = sum(1 for count in frequency_dict.values() if (count >= 21 and count <= 50))\n",
+    "    count_set_4 = sum(1 for count in frequency_dict.values() if (count >= 51))\n",
+    "    \n",
+    "    \n",
     "    print(\"Percentage of nodes with unique (n, m) values:\", percentage_unique)\n",
     "    print(\"Number of unique nodes:\", unique_count)\n",
     "    \n",
