--- a/toydata.ipynb
+++ b/toydata.ipynb
@@ -94,6 +94,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Func 6: (n,m) anonymity Adaptation\n",
+    "\n",
+    "def n_m_anonymity_normalized(G):\n",
+    "    \n",
+    "    # Create ego network\n",
+    "    ego_properties = {}\n",
+    "\n",
+    "    # Obtain (n, m) value for each node\n",
+    "    for node in G.nodes():\n",
+    "        ego_net = nx.ego_graph(G, node)\n",
+    "        \n",
+    "        n = ego_net.number_of_nodes()\n",
+    "        m = ego_net.number_of_edges()\n",
+    "        \n",
+    "        ego_properties[node] = (n, m)\n",
+    "    \n",
+    "    # Store nodes as keys and the frequency of its (n,m) in the network as values\n",
+    "    frequency_dict = {}\n",
+    "    for node, (n, m) in ego_properties.items():\n",
+    "        freq_count = sum(1 for props in ego_properties.values() if props == (n, m))\n",
+    "        frequency_dict[node] = freq_count\n",
+    "    \n",
+    "    unique_count = sum(1 for count in frequency_dict.values() if count == 1)\n",
+    "    total_nodes = G.number_of_nodes()\n",
+    "    percentage_unique = (unique_count / total_nodes) * 100  \n",
+    "    \n",
+    "    # Normalized the uniqueness values\n",
+    "    uniqueness = [freq/len(G) for freq in frequency_dict.values()]\n",
+    "    normalized_uniqueness = [(value - min(uniqueness)/(max(uniqueness) - min(uniqueness)) for value in uniqueness)]\n",
+    "    normalized_uniqueness_dict = {node:normalized_uniqueness[i] for i, node in enumerate(frequency_dict.keys())}\n",
+    "    \n",
+    "    return frequency_dict, normalized_uniqueness_dict"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -788,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1793,6 +1833,78 @@
     "plt.ylabel('Percentage')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Func 1: (n,m) Uniquness Count for every snapshot from 0% to 100% network evolving, 2% every snapshot\n",
+    "def snapshots_uniqueness_nor(edges, step=0.02, part=1):\n",
+    "    unique_percentage = []\n",
+    "    count = []\n",
+    "    G = nx.DiGraph()\n",
+    "    G.add_edges_from(edges)\n",
+    "    M = G.number_of_edges()\n",
+    "    \n",
+    "    for i in range(1, int(part*M), int(step*M)):\n",
+    "        sub_edge = edges[:i]\n",
+    "        snapshot = nx.DiGraph()\n",
+    "        snapshot.add_edges_from(sub_edge)\n",
+    "            \n",
+    "        # print(\"Snapshot\", i)\n",
+    "        # print(\"No. of Nodes:\", snapshot.number_of_nodes(), \"No. of Edges:\",snapshot.number_of_edges())\n",
+    "            \n",
+    "        anonymity_dict, normalized_dict = n_m_anonymity(snapshot)\n",
+    "        unique_count = sum(1 for count in anonymity_dict.values() if count == 1)\n",
+    "        total_nodes = snapshot.number_of_nodes()\n",
+    "        percentage_unique = (unique_count / total_nodes) * 100  \n",
+    "            \n",
+    "        unique_percentage.append(percentage_unique)\n",
+    "        count.append(unique_count)\n",
+    "        #print(i)\n",
+    "    \n",
+    "    return count, unique_percentage, normalized_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [91], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m count, unique_percentage, \u001b[38;5;28mdict\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43msnapshots_uniqueness_nor\u001b[49m\u001b[43m(\u001b[49m\u001b[43medges\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn [88], line 18\u001b[0m, in \u001b[0;36msnapshots_uniqueness_nor\u001b[1;34m(edges, step, part)\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# print(\"Snapshot\", i)\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# print(\"No. of Nodes:\", snapshot.number_of_nodes(), \"No. of Edges:\",snapshot.number_of_edges())\u001b[39;00m\n\u001b[0;32m     17\u001b[0m anonymity_dict, normalized_dict \u001b[38;5;241m=\u001b[39m n_m_anonymity(snapshot)\n\u001b[1;32m---> 18\u001b[0m unique_count \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m count \u001b[38;5;129;01min\u001b[39;00m \u001b[43manonymity_dict\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m() \u001b[38;5;28;01mif\u001b[39;00m count \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     19\u001b[0m total_nodes \u001b[38;5;241m=\u001b[39m snapshot\u001b[38;5;241m.\u001b[39mnumber_of_nodes()\n\u001b[0;32m     20\u001b[0m percentage_unique \u001b[38;5;241m=\u001b[39m (unique_count \u001b[38;5;241m/\u001b[39m total_nodes) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m  \n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'values'"
+     ]
+    }
+   ],
+   "source": [
+    "count, unique_percentage, dict = snapshots_uniqueness_nor(edges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AS = weight1 * unique + weight2* betweenness\n"
    ]
   }
  ],
