--- a/toydata.ipynb
+++ b/toydata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
     "import time\n",
     "from collections import defaultdict\n",
     "import seaborn as sns\n",
-    "import igraph as ig"
+    "from igraph import Graph"
    ]
   },
   {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,8 @@
     "    for i in range(10, int(part*M), int(step*M)):\n",
     "        # Create Snapshot\n",
     "        sub_edge = edges[:i]\n",
-    "        snapshot = nx.DiGraph()\n",
+    "        #snapshot = nx.DiGraph()\n",
+    "        snapshot = ig.Graph()\n",
     "        snapshot.add_edges_from(sub_edge)\n",
     "        N = snapshot.number_of_nodes()\n",
     "        \n",
@@ -662,8 +663,8 @@
     "        percentage_unique = (unique_count / N) * 100\n",
     "        \n",
     "        # Calculate betweenness Ranking\n",
-    "        rank = betweenness_centra(snapshot)\n",
-    "        #rank = betweenness_centra_ig(snapshot)\n",
+    "        #rank = betweenness_centra(snapshot)\n",
+    "        rank = betweenness_centra_ig(snapshot)\n",
     "\n",
     "        # top_10 = list(rank.keys())[:int(0.1 * len(rank))]\n",
     "        # last_10 = list(rank.keys())[int(0.9 * len(rank)):]\n",
@@ -708,7 +709,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Func 2.x: igraph version (n,m) Uniquness Count with betweenness ranking for every snapshot from 0% to 100% network evolving, 2% every snapshot\n",
+    "def snapshots_uniqueness_betweenness(edges, step=0.02, part=1):\n",
+    "    unique_top10 = []\n",
+    "    unique_mid10 = []\n",
+    "    unique_last10 = []\n",
+    "    unique_start10 = []\n",
+    "    unique_percentage = []\n",
+    "    count = []\n",
+    "    precision = []\n",
+    "    recall = []\n",
+    "    nodes_num = []\n",
+    "    \n",
+    "    G = nx.DiGraph()\n",
+    "    G.add_edges_from(edges)\n",
+    "    M = G.number_of_edges()\n",
+    "\n",
+    "    for i in range(10, int(part*M), int(step*M)):\n",
+    "        # Create Snapshot\n",
+    "        sub_edge = edges[:i]\n",
+    "        snapshot = Graph.TupleList(sub_edge, directed=True)\n",
+    "        N = snapshot.vcount()\n",
+    "            \n",
+    "        # Calculate (n, m) anonymity\n",
+    "        anonymity_dict = n_m_anonymity(snapshot)\n",
+    "        unique_count = sum(1 for count in anonymity_dict.values() if count == 1)\n",
+    "        percentage_unique = (unique_count / N) * 100\n",
+    "        \n",
+    "        # Calculate betweenness Ranking\n",
+    "        #rank = betweenness_centra(snapshot)\n",
+    "        rank = betweenness_centra_ig(snapshot)\n",
+    "\n",
+    "        # top_10 = list(rank.keys())[:int(0.1 * len(rank))]\n",
+    "        # last_10 = list(rank.keys())[int(0.9 * len(rank)):]\n",
+    "        # start_10 = list(rank.keys())[int(0.1 * len(rank)) : int(0.2 * len(rank))]\n",
+    "        # mid_10 = list(rank.keys())[int(0.4 * len(rank)) : int(0.5 * len(rank))]\n",
+    "        top_10 = list(rank.keys())[:int(0.1 * N)]\n",
+    "        last_10 = list(rank.keys())[int(0.9 * N):]\n",
+    "        start_10 = list(rank.keys())[int(0.1 * N) : int(0.2 * N)]\n",
+    "        mid_10 = list(rank.keys())[int(0.4 * N) : int(0.5 * N)]\n",
+    "        \n",
+    "        # Precision: In the retrieved top 10% nodes, how many are indeed unique\n",
+    "        \n",
+    "        top_10_percent_nodes_values = {node: anonymity_dict[node] for node in top_10}\n",
+    "        mid_10_percent_nodes_values = {node: anonymity_dict[node] for node in mid_10}\n",
+    "        last_10_percent_nodes_values = {node: anonymity_dict[node] for node in last_10}\n",
+    "        start_10_percent_nodes_values = {node: anonymity_dict[node] for node in start_10}\n",
+    "        \n",
+    "        # Top 10%\n",
+    "        unique_count_top = sum(1 for count in top_10_percent_nodes_values.values() if count == 1)\n",
+    "        unique_top10.append(unique_count_top)\n",
+    "        # mid 10%\n",
+    "        unique_count_mid = sum(1 for count in mid_10_percent_nodes_values.values() if count == 1)\n",
+    "        unique_mid10.append(unique_count_mid)     \n",
+    "        # Last 10%\n",
+    "        unique_count_last = sum(1 for count in last_10_percent_nodes_values.values() if count == 1)\n",
+    "        unique_last10.append(unique_count_last)\n",
+    "        # 10%-20%\n",
+    "        unique_count_start = sum(1 for count in start_10_percent_nodes_values.values() if count == 1)\n",
+    "        unique_start10.append(unique_count_start)\n",
+    "        \n",
+    "        \n",
+    "        # Precision: In the retrieved top 10% nodes, how many are indeed unique\n",
+    "        precision.append(unique_count_top/len(top_10))\n",
+    "        # Recall: Out of all unique nodes, how many are retrieved in top 10%\n",
+    "        recall.append(unique_count_top/unique_count)\n",
+    "        nodes_num.append(N)\n",
+    "        count.append(unique_count)\n",
+    "        unique_percentage.append(percentage_unique)\n",
+    "             \n",
+    "    return count, unique_percentage, nodes_num, unique_top10, unique_mid10, unique_last10, unique_start10, precision, recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -928,9 +1007,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Graph' object has no attribute 'nodes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [24], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m count, unique_percentage, nodes_num, top, mid, last, start, precision, recall \u001b[38;5;241m=\u001b[39m \u001b[43msnapshots_uniqueness_betweenness\u001b[49m\u001b[43m(\u001b[49m\u001b[43medges\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn [23], line 24\u001b[0m, in \u001b[0;36msnapshots_uniqueness_betweenness\u001b[1;34m(edges, step, part)\u001b[0m\n\u001b[0;32m     21\u001b[0m N \u001b[38;5;241m=\u001b[39m snapshot\u001b[38;5;241m.\u001b[39mvcount()\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# Calculate (n, m) anonymity\u001b[39;00m\n\u001b[1;32m---> 24\u001b[0m anonymity_dict \u001b[38;5;241m=\u001b[39m \u001b[43mn_m_anonymity\u001b[49m\u001b[43m(\u001b[49m\u001b[43msnapshot\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     25\u001b[0m unique_count \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m count \u001b[38;5;129;01min\u001b[39;00m anonymity_dict\u001b[38;5;241m.\u001b[39mvalues() \u001b[38;5;28;01mif\u001b[39;00m count \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     26\u001b[0m percentage_unique \u001b[38;5;241m=\u001b[39m (unique_count \u001b[38;5;241m/\u001b[39m N) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n",
+      "Cell \u001b[1;32mIn [3], line 10\u001b[0m, in \u001b[0;36mn_m_anonymity\u001b[1;34m(G)\u001b[0m\n\u001b[0;32m      7\u001b[0m temp \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Obtain (n, m) value for each node\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mG\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnodes\u001b[49m():\n\u001b[0;32m     11\u001b[0m     ego_net \u001b[38;5;241m=\u001b[39m nx\u001b[38;5;241m.\u001b[39mego_graph(G, node)\n\u001b[0;32m     13\u001b[0m     n \u001b[38;5;241m=\u001b[39m ego_net\u001b[38;5;241m.\u001b[39mnumber_of_nodes()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Graph' object has no attribute 'nodes'"
+     ]
+    }
+   ],
    "source": [
     "count, unique_percentage, nodes_num, top, mid, last, start, precision, recall = snapshots_uniqueness_betweenness(edges)"
    ]
